# weenspacce-django-jwt

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test-suite.yml
django_jwt/: __init__.py  backends.py  decorators.py  exceptions.py  middleware.py  mixins.py  mutations.py  relay.py  settings.py  testcases.py  utils.py
django_jwt/locale/ar/LC_MESSAGES/: django.po
django_jwt/locale/de/LC_MESSAGES/: django.po
django_jwt/locale/es/LC_MESSAGES/: django.po
django_jwt/locale/fr/LC_MESSAGES/: django.po
django_jwt/locale/pt_BR/LC_MESSAGES/: django.po
django_jwt/refresh_token/: apps.py  decorators.py  mixins.py  shortcuts.py
django_jwt/refresh_token/locale/ar/LC_MESSAGES/: django.po
django_jwt/refresh_token/locale/es/LC_MESSAGES/: django.po
django_jwt/refresh_token/locale/fr/LC_MESSAGES/: django.po
django_jwt/refresh_token/locale/pt_BR/LC_MESSAGES/: django.po
docs/: authentication.rst  conf.py  customizing.rst  decorators.rst  index.rst  quickstart.rst  refresh_token.rst  relay.rst  settings.rst  signals.rst  tests.rst
docs/_static/: style.css
scripts/: lint.sh  test.sh
tests/: context_managers.py  decorators.py  mixins.py  settings.py  test_backends.py  test_decorators.py  test_middleware.py  test_mutations.py  test_path.py  test_queries.py  test_relay.py  test_settings.py  test_shortcuts.py  test_utils.py  testcases.py
tests/refresh_token/: mixins.py  mutations.py  relay.py  test_admin.py  test_commands.py  test_models.py  test_mutations.py  test_relay.py  test_shortcuts.py  testcases.py
