[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "weenspace-django-jwt"
version = "1.0.0"
description = "JSON Web Token for Django REST and GraphQL."
license = "MIT"
authors = ["Huynh Doan Thinh <hdthinh@gmail.com>"]
readme = "README.md"
include = ["LICENSE", "README.md"]
keywords = ["django", "jwt", "API", "REST", "GraphQL"]

homepage = "https://github.com/weensapce/weenspace-django-jwt"
repository = "https://github.com/weensapce/weenspace-django-jwt"
documentation = "https://github.com/weensapce/weenspace-django-jwt"

packages = [
    { include = "django_jwt" },
]

classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10.0",
    "Programming Language :: Python :: 3.11.2",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1.17",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[tool.poetry.dependencies]
python = "^3.10.0"

Django = ">=4.0.0"
graphene = ">=2.1.5"
graphene-django = ">=2.0.0"
PyJWT = ">=2,<3"

[tool.poetry.dev-dependencies]
black = "*"
codecov = "*"
cryptography = "*"
flake8 = "*"
isort = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
sphinx = "*"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.black]
extend-exclude = '''
/(
  | .htmlcov
  | dist
)/
'''

[tool.isort]
profile = "black"
skip = "migrations"
default_section = "THIRDPARTY"
known_django = "django"
known_first_party = "django_jwt"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
